# notepad-server

./: .env.example  Cargo.toml  Makefile  README.md
logs/: notepad.log.2026-05-08
migrations/: 20250319000000_create_users.sql  20260320000000_add_password_to_users.sql  20260331000000_create_notes.sql  20260401000000_add_user_id_to_notes.sql  20260405000000_create_sections.sql  20260405100000_fk_notes_section_id.sql  20260405110000_sections_user_id.sql
scripts/: truncate_data.sql
src/: config.rs  error.rs  lib.rs  main.rs  other.rs  response.rs  state.rs
src/auth/: mod.rs
src/handlers/: health.rs  mod.rs  notes.rs  sections.rs  users.rs
src/models/: mod.rs  note.rs  section.rs  user.rs
src/routes/: authenticated.rs  health.rs  mod.rs  notes.rs  sections.rs  users.rs
src/services/: health.rs  mod.rs  note.rs  section.rs  user.rs
src/utils/: email.rs  get_html.rs  mod.rs  open_ai_model.rs  openai_model.rs  user.rs
