[package]
name = "notepad"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "1.1.0", features = ["tokio-comp", "connection-manager"] }
rand = "0.8"
lettre = "0.11.19"
