[package]
name = "notepad"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "1.1.0", features = ["tokio-comp", "connection-manager"] }
rand = "0.8"
lettre = "0.11.19"
jsonwebtoken = "9"
async-trait = "0.1"
argon2 = { version = "0.5.3", features = ["std"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
reqwest = { version = "0.13.2", features = ["blocking"] }
readabilityrs = "0.1"
rig_core = { version = "0.35.0", package = "rig-core" }
futures = "0.3"
bytes = "1.11.1"
